# hdu2025_compiler_principles

./: .envrc  .gitignore  .gitmodules  Makefile  README.md  root.opam
.github/workflows/: ci.yml
assets/hdu-report-typst/: README.md  report_template.typ
assets/hdu-report-typst/template/: covers.typ  fonts.typ  template.typ
exp_1/: Makefile  report.typ  sample.c
exp_2/: .ocamlformat  Makefile  dune  dune-project  exp_2.ml  exp_2.opam  report.typ
exp_3/: Makefile  dune  dune-project  exp_3.ml  exp_3.opam  exp_3.typ  lib.ml  report.typ
exp_4/: .ocamlformat  Makefile  ast.ml  ast.mli  common.ml  dune  dune-project  exp_4.opam  lexer.mll  main.ml  notes.md  opt.ml  opt.mli  parser.mly  report.typ  sem_ast.ml  sem_ast.mli  semant.ml  semant.mli  ssa.ml  ssa.mli  ssa_dump.ml  ssa_dump.mli  tac.ml  tac.mli  tokens.ml  tokens.mli  typed_ast.ml  typed_ast.mli  util.ml
exp_4/iongraph/: dune  types.ml
exp_4/samples/: task_4_2_sample_3.sy  test_lexer_bad_int_lit.sy  test_lexer_bad_int_lit_1.sy  test_lexer_bad_int_lit_2.sy  test_lexer_bad_int_lit_3.sy
exp_4/scripts/: run_tests.sh
exp_4/tests/: program_const_1.sy  program_quicksort.sy  program_synthetic_1.sy  program_synthetic_2.sy  program_synthetic_3.sy  program_synthetic_4.sy  task_4_3_sample_2_single_err_1.sy  task_4_3_sample_2_single_err_2.sy  test_lexer_bad_float_lit_1.sy  test_lexer_bad_float_lit_2.sy  test_lexer_bad_int_lit_2.sy  test_parser_array_1.sy  test_parser_array_2.sy  test_parser_unary_neg.sy  test_ssa_control_1.sy  test_ssa_globals_1.sy  test_ssa_no_ret.sy  test_tac_conversions_1.sy  test_tac_scopes_2.sy  test_type_bad_consts_1.sy  test_type_bad_consts_2.sy  test_type_bad_consts_3.sy  test_type_bad_dims_1.sy  test_type_bad_id_1.sy  test_type_bad_id_3.sy  test_type_bad_scopes_1.sy  test_type_bad_scopes_2.sy  test_type_scopes_1.sy  test_typecheck_bad_id_2.sy  test_typecheck_bad_multi_error_1.sy  test_typecheck_bad_return_1.sy  test_typecheck_bad_return_2.sy  testlist.tsv
