opam-version: "2.0"
synopsis: "HDU (2025-2026-1)-S0512260-13 《编译原理课程实践》课程实验"
maintainer: ["CSharperMantle <webmaster@csmantle.top>"]
depends: [
  "dune" {>= "3.20"}
  "ocaml" {= "5.4.0"}
  "menhir" {>= "20250912"}
  "ocaml-lsp-server"
  "ocamlformat"
  "utop"
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "make"
    "-j"
    jobs
    "all"
  ]
]
x-maintenance-intent: ["(latest)"]
