(ocamllex lexer)

(menhir
  (modules parser)
  (flags
    --table
    --comment
    --strict
    --no-dollars
    --reference-graph
    --random-seed=0x0d000721)
  (explain true)
  (infer true))

(executable
  (name main)
  (public_name exp_4)
  (libraries menhirLib)
  (modules
    common
    util
    tokens
    lexer
    ast
    parser
    typed_ast
    semant
    main)
  (modes native)
  (flags (:standard
    -warn-error -27
    -warn-error -26
    -warn-error -32
    -warn-error -33))
  (ocamlopt_flags (:standard -g)))
