(ocamllex lexer)

(menhir
  (modules parser)
  (flags
    --table
    --comment
    --strict
    --no-dollars
    --reference-graph
    --random-seed=0x0d000721)
  (explain true)
  (infer true))

(library
  (name exp_4)
  (libraries menhirLib yojson iongraph)
  (preprocess (pps ppx_deriving_yojson))
  (modules
    common
    util
    tokens
    lexer
    ast
    parser
    sem_ast
    tac
    semant
    ssa)
  (flags (:standard
    -warn-error -27
    -warn-error -26
    -warn-error -32
    -warn-error -33
    -warn-error -69))
  (ocamlopt_flags (:standard -g)))

(executable
  (name main)
  (public_name exp_4)
  (libraries exp_4 menhirLib)
  (modules main)
  (modes native)
  (ocamlopt_flags (:standard -g)))