(lang dune 3.20)
(name exp_4)

(generate_opam_files true)

(maintainers "CSharperMantle <webmaster@csmantle.top>")

(package
 (name exp_4)
 (synopsis "Experiment 4")
 (depends
  (ocaml (= 5.4.0))
  (menhir (>= 20250912))
  ocaml-lsp-server
  ocamlformat
  utop
  yojson
  ppx_deriving_yojson))

(using menhir 3.0)
